@@ -118,10 +118,10 @@
 (defvar ebuild-mode-keywords-toolchain-funcs
   '(("tc-getPROG" "tc-getAR" "tc-getAS" "tc-getCC" "tc-getCPP" "tc-getCXX"
      "tc-getLD" "tc-getSTRIP" "tc-getNM" "tc-getRANLIB" "tc-getF77"
-     "tc-getF90" "tc-getFORTRAN" "tc-getGCJ" "tc-getBUILD_CC" "tc-export"
-     "tc-is-cross-compiler" "tc-ninja_magic_to_arch" "tc-arch-kernel"
-     "tc-arch" "tc-endian" "gcc-fullversion" "gcc-version" "gcc-major-version"
-     "gcc-minor-version" "gcc-micro-version")
+     "tc-getF90" "tc-getFORTRAN" "tc-getGCJ" "tc-getBUILD_CC" "tc-getPKG_CONFIG"
+     "tc-export" "tc-is-cross-compiler" "tc-ninja_magic_to_arch"
+     "tc-arch-kernel" "tc-arch" "tc-endian" "gcc-fullversion" "gcc-version"
+     "gcc-major-version" "gcc-minor-version" "gcc-micro-version")
     font-lock-type-face))
 
 (defvar ebuild-mode-keywords-toolchain
