@@ -1,3 +1,8 @@
+2009-12-01  Christian Faulhammer  <fauli@gentoo.org>
+
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-toolchain-funcs):
+	add tc-getPKG_CONFIG function
+
 2009-11-09  Ulrich Mueller  <ulm@gentoo.org>
 
 	* eselect-mode-keywords.el (eselect-mode-keywords-output):
